Move the registration of blocks to PHP. Adding more styles and wrapper classes to set new defaults, includig breakpoints.

--- a/wp-content/themes/jecoWordpressShell/src/scss/_buttons.scss
+++ b/wp-content/themes/jecoWordpressShell/src/scss/_buttons.scss
@@ -20,7 +20,7 @@ button,
 	height: 66px;
 	padding: 0;
 
-	@include for-bp("desktop-lg") {
+	@include for-bp("desktop-sm") {
 		font-size: 1.688rem;
 	}
 }
