--- a/wp-content/themes/jecoWordpressShell/src/scss/_footer.scss
+++ b/wp-content/themes/jecoWordpressShell/src/scss/_footer.scss
@@ -1,31 +1,1 @@
-footer {
-	font-family: var(--font-oswald);
-	.wrapper {
-		text-transform: uppercase;
-		display: grid;
-		row-gap: 25px;
-
-		@include for-bp("mobile-md") {
-			grid-template-columns: repeat(2, 1fr);
-			align-items: center;
-			gap: 20px;
-		}
-		@include for-bp("tablet-lg"){
-			grid-template-columns: repeat(4, 1fr);
-			gap: 35px;
-		}
-	}
-	hr {
-		margin: 0 auto;
-		width: 100%;
-		height: 1px;
-		border: none;
-		background-color: var(--color-grey);
-	}
-
-	.copyright {
-		text-align: center;
-		margin-bottom: 85px;
-		margin-top: 25px;
-	}
-}
+footer.main-footer {}
