--- a/wp-content/themes/jecoWordpressShell/src/scss/_global.scss
+++ b/wp-content/themes/jecoWordpressShell/src/scss/_global.scss
@@ -1,7 +1,12 @@
+// Set base font size
+html {
+	font-size: 16px; // 1rem = 16px
+}
+
 body {
 	font-family: var(--font-Abril-Display-Regular);
 	color: var(--color-black);
-	font-size: 16px;
+	font-size: 1rem;
 }
 
 a {
@@ -12,32 +17,41 @@ a {
 }
 
 p {
-	font-size: 1.25rem;
+	font-size: 1rem;
 }
 
 .wrapper {
-	padding: 40px 30px;
+	max-width: 100%;
+	margin: 0 auto;
+	padding: 0 1rem;
 
-	@include for-bp("mobile-md") {
+	// Apply styles for mobile devices and up
+	@include for-bp('mobile-md') {
+		padding: 0 1.5rem;
 	}
 
-	@include for-bp("tablet-switch") {
+	// Apply styles for tablets and up
+	@include for-bp('tablet-md') {
+		padding: 0 2rem;
 	}
 
-	@include for-bp("tablet-lg") {
-		padding: 100px 10%;
+	// Apply styles for small desktops and up
+	@include for-bp('desktop-sm') {
+		max-width: 1200px;
 	}
 
-	@include for-bp("desktop-switch") {
+	// Apply styles for medium desktops and up
+	@include for-bp('desktop-md') {
+		max-width: 1400px;
 	}
 
-	@include for-bp("desktop-lg") {
+	// Apply styles for large desktops and up
+	@include for-bp('desktop-lg') {
+		// Additional styles for very large screens can be added here if needed
 	}
 
-	@include for-bp("desktop-xl") {
-		max-width: 1320px; //1320px suggested by Bootstrap V5.3
-		margin: 0 auto;
-		padding-left: 0;
-		padding-right: 0;
+	// Apply styles for extra large screens
+	@include for-bp('extra-large') {
+		// Additional styles for very large screens can be added here if needed
 	}
 }
