--- a/wp-content/themes/jecoWordpressShell/src/scss/_fonts.scss
+++ b/wp-content/themes/jecoWordpressShell/src/scss/_fonts.scss
@@ -1,39 +1,90 @@
-@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
 
-// Importing Display clean. Alternative to Better
-@font-face {
-	font-family: "Display-Clean";
-	src: url(#{$FONTS_PATH}/Display-Clean.ttf.woff) format("woff"),
-		url(#{$FONTS_PATH}/Display-Clean.ttf.svg#Display-Clean) format("svg"),
-		url(#{$FONTS_PATH}/Display-Clean.ttf.eot),
-		url(#{$FONTS_PATH}/Display-Clean.ttf.eot?#iefix)
-			format("embedded-opentype");
-	font-weight: normal;
-	font-style: normal;
+$font-text: "Source Serif 4", serif;
+$font-title: "Source Sans 3", sans-serif;
+$font-button: "Source Sans 3", sans-serif;
+
+
+//Implementing font sizes for all the texts options.
+$base-font-size: 1rem;
+$scale: 1.2;
+
+@mixin heading-sizes($level) {
+	@if $level ==-1 {
+		font-size: calc($base-font-size / $scale);
+	}
+
+	@else if $level ==0 {
+		font-size: ($base-font-size);
+	}
+
+	@else {
+		font-size: ($base-font-size * ($scale * $level));
+	}
 }
 
-// Importing Abril Display font
-@font-face {
-	font-family: "Abril-Display-Regular";
-	src: url(#{$FONTS_PATH}/Abril_Display_Regular.otf) format("otf");
-	font-weight: normal;
-	font-style: normal;
+// Apply the font sizes for each heading
+
+html,
+body {
+	font-size: 16px
 }
 
-:root {
-	--font-oswald: "Oswald", sans-serif;
-	--font-displayClean: "Display-Clean";
-	--font-Abril-Display-Regular : "Abril-Display-Regular"; 
-	--font-bold-default: 500;
-	--font-weight-light: 300;
+h6 {
+	@include heading-sizes(-1);
+	line-height: 1.4;
+	/* 1.4 times the font size for compact text */
+	margin-bottom: 0.5rem;
+	/* Tight spacing for smaller headings */
 }
 
-.h1 {
-	font-size: 4rem;
+h5,
+p,
+a,
+span {
+	@include heading-sizes(0);
+	line-height: 1.5;
+	/* Standard readable line height */
+	margin-bottom: 0.75rem;
+	/* Moderate spacing for regular text */
 }
 
-.title-3 {
-	font-family: var(--font-oswald);
-	font-size: 2.5rem;
-	text-transform: uppercase;
+h4 {
+	@include heading-sizes(1);
+	line-height: 1.4;
+	/* Slightly compact to maintain proximity */
+	margin-bottom: 1rem;
+	/* A bit more space to set off from text */
+}
+
+h3 {
+	@include heading-sizes(2);
+	line-height: 1.3;
+	/* Slightly tighter to fit the larger size */
+	margin-bottom: 1.2rem;
+	/* Larger margin to balance the size */
+}
+
+h2 {
+	@include heading-sizes(3);
+	line-height: 1.2;
+	/* Tight line-height for large text */
+	margin-bottom: 1.5rem;
+	/* More margin to emphasize hierarchy */
+}
+
+h1 {
+	@include heading-sizes(4);
+	line-height: 1.2;
+	/* Tightest line height for very large headings */
+	margin-bottom: 2rem;
+	/* Large margin to separate the most important heading */
+}
+
+button,
+.button,
+input[type="button"],
+input[type="submit"],
+input[type="reset"] {
+	font-family: $font-button;
 }
