--- a/wp-content/themes/jecoWordpressShell/src/scss/_global.scss
+++ b/wp-content/themes/jecoWordpressShell/src/scss/_global.scss
@@ -1,23 +1,10 @@
-// Set base font size
-html {
-	font-size: 16px; // 1rem = 16px
-}
-
-body {
-	font-family: var(--font-Abril-Display-Regular);
-	color: var(--color-black);
-	font-size: 1rem;
-}
-
 a {
 	text-decoration: none;
-	color: var(--link-color);
 	cursor: pointer;
-	// font-weight: var(--font-bold-default);
 }
 
-p {
-	font-size: 1rem;
+.mb-0 {
+	margin-bottom: 0;
 }
 
 .wrapper {
