--- a/wp-content/themes/jecoWordpressShell/src/scss/_fonts.scss
+++ b/wp-content/themes/jecoWordpressShell/src/scss/_fonts.scss
@@ -7,7 +7,7 @@ $font-button: "Source Sans 3", sans-serif;
 
 //Implementing font sizes for all the texts options.
 $base-font-size: 1rem;
-$scale: 1.2;
+$scale: 1.143;
 
 @mixin heading-sizes($level) {
 	@if $level ==-1 {
@@ -30,7 +30,8 @@ body {
 	font-size: 16px
 }
 
-h6 {
+h6,
+.h6 {
 	@include heading-sizes(-1);
 	line-height: 1.4;
 	/* 1.4 times the font size for compact text */
@@ -39,7 +40,7 @@ h6 {
 }
 
 h5,
-p,
+.h5 p,
 a,
 span {
 	@include heading-sizes(0);
@@ -49,7 +50,8 @@ span {
 	/* Moderate spacing for regular text */
 }
 
-h4 {
+h4,
+.h4 {
 	@include heading-sizes(1);
 	line-height: 1.4;
 	/* Slightly compact to maintain proximity */
@@ -57,7 +59,8 @@ h4 {
 	/* A bit more space to set off from text */
 }
 
-h3 {
+h3,
+.h3 {
 	@include heading-sizes(2);
 	line-height: 1.3;
 	/* Slightly tighter to fit the larger size */
@@ -65,7 +68,8 @@ h3 {
 	/* Larger margin to balance the size */
 }
 
-h2 {
+h2,
+.h2 {
 	@include heading-sizes(3);
 	line-height: 1.2;
 	/* Tight line-height for large text */
@@ -73,7 +77,8 @@ h2 {
 	/* More margin to emphasize hierarchy */
 }
 
-h1 {
+h1,
+.h1 {
 	@include heading-sizes(4);
 	line-height: 1.2;
 	/* Tightest line height for very large headings */
